webUI/theme.css
/* ... */
/* Adapted from https://uiverse.io/aasisodiya/sour-horse-29 */
.switch {
  font-size: 1rem;
  position: relative;
  display: inline-block;
  width: 4em;
  min-width: 4em;
  height: 2em;
}

.switch input {
  opacity: 0;
  width: 0;
  height: 0;
}

.slider {
  position: absolute;
  cursor: pointer;
  inset: 0;
  background-color: rgba(0, 0, 0, 0.25);
  transition: 0.4s;
  border-radius: 0.5em;
  box-shadow: 0 0.2em rgba(0, 0, 0, 0.5);
}

.slider:before {
  position: absolute;
  content: "";
  height: 1.5em;
  width: 1.4em;
  border-radius: 0.3em;
  left: 0.3em;
  bottom: 0.7em;
  background-color: var(--red-bg);
  box-shadow: 0 0.4em rgba(0, 0, 0, 0.5);
}

.slider:hover::before {
  box-shadow: 0 0.19em rgba(0, 0, 0, 0.5);
  bottom: 0.5em;
}

input:checked + .slider:before {
  transform: translateX(2em);
  background: var(--green-bg);
}

.switch:has(> :is(input:disabled, input[disabled])) > .slider::before {
  background-color: rgba(0, 0, 0, 0.5);
}

.capture-exit {
  pointer-events: none;
  z-index: 50;
  opacity: 0;
}

.image-container {
  margin-top: 62.5px;
  margin-bottom: 12.5px;
}

.loader {
  width: 112px;
  height: 112px;
  .box1,
  .box2,
  .box3 {
    border: 16px solid #f5f5f5;
    box-sizing: border-box;
    position: absolute;
    display: block;
    transition: border-color 0.5s ease-in-out;
  }
}

.loading-screen.loading-screen {
  display: flex;
  justify-content: center;
  align-items: center;
  flex-direction: column;
  z-index: 1000;
  opacity: 0;
  pointer-events: none;
  transition: opacity 0.5s ease-in-out;
  > p {
    padding: 10px;
    font-family: "Futura Heavy";
  }
}

.mev option {
  background: var(--dark-bg);
  font-family: var(--font);
}

.preselected {
  position: fixed;
  z-index: 1000;
  text-align: center;
  padding: 5px 10px;
  left: 50%;
  top: -20vh;
  transform: translateX(-50%);
  transition:
    height 0.25s ease,
    top 0.625s ease-in-out,
    transform 0.625s ease-in-out;
}

.preselected-unselect {
  cursor: pointer;
  color: white;
  text-decoration: underline;
  transition: font-size 0.25s ease;
  &:hover {
    font-family: "Futura Heavy";
    font-size: 1.05em;
  }
}

[class$="nav"] {
  background-color: #333;
  list-style-type: none;
  margin: 0;
  max-height: 45px;
  overflow: hidden;
  padding: 0;
  position: fixed;
  top: 0;
  width: 100%;
  z-index: 100;
}

.nav-link:active {
  background-color: transparent;
  color: white;
  text-decoration: underline;
}

.nav-link:hover {
  background-color: transparent;
  color: white;
  text-decoration: underline;
}

.nav-link:link {
  background-color: transparent;
  color: white;
  text-decoration: none;
}

.nav-link:visited {
  background-color: transparent;
  color: white;
  text-decoration: none;
}

.subcategory {
  width: 100%;
  &:not(:last-child) {
    margin-bottom: 20px;
  }
}

.tile {
  background-size: cover;
  height: 100px;
  overflow: hidden;
  width: 100px;
}

.tweak {
  box-shadow: 0 0 10px rgba(49, 50, 51, 1);
  cursor: pointer;
  display: flex;
  flex-direction: column;
  padding: 10px 15px !important;
  position: relative;
  input[type="checkbox"] {
    display: none;
    font-family: var(--font);
  }
  &:hover[oreui-state="active"][oreui-active-color="purple"]
    [class$="hover-text"] {
    display: block;
  }
}

.tweak-description {
  font-size: 0.99em;
}

[class^="desc"] {
  margin-top: 0;
  margin-bottom: 0;
  font-size: 0.875em;
}

.desc-error {
  color: red;
}

.desc-info {
  color: cyan;
}

.desc-warn {
  color: orange;
}

.tweak-info {
  margin-left: -5px;
  margin-right: -5px;
  > img {
    image-rendering: pixelated;
  }
}
.comp-hover-text {
  bottom: 100%;
  transform: translate(-50%, 100%) !important;
}

[class$="hover-text"] {
  display: none;
  position: absolute;
  left: 0%;
  width: calc(100% - 20px);
  word-wrap: anywhere;
  padding: 5px;
  text-align: center;
  z-index: 100;
  font-size: inherit;
  overflow-x: scroll;
  scrollbar-width: none;
  font-size: 13px;
  &::-webkit-scrollbar {
    display: none;
  }
}

.conf-hover-text {
  bottom: 0%;
}

.tweak-list-category {
  display: none;
  font-size: 1.2em;
  font-family: "Futura Heavy";
  text-decoration: underline;
  margin-top: 5px;
}

.tweak-list-pack {
  display: none;
}

.tweak-title {
  font-size: 1.2em;
}

.tweaks,
.subcattweaks {
  position: relative;
  align-items: stretch;
  display: grid;
  gap: 10px;
  grid-template-columns: repeat(auto-fit, minmax(137.5px, 1fr));
  margin: 20px;
  text-align: center;
  z-index: 1;
}

.zipinputcontainer {
  display: none;
}

@media (max-width: 767px) {
  .large-nav {
    display: block;
    transform: translateY(-100%);
  }

  .small-nav {
    display: block;
    transform: translateY(0%);
  }
}
/* ... */

